# Design-Pattern-Projects

./: CMakeLists.txt  README.md
Figures-Project/: CMakeLists.txt
Figures-Project/include/: abstract_factory.h  circle.h  figure.h  figure_factory.h  random_figure_factory.h  rectangle.h  stream_factory.h  string_to_figure.h  to_string.h  triangle.h
Figures-Project/src/: Figures.cpp  abstract_factory.cpp  circle.cpp  random_factory.cpp  rectangle.cpp  stream_factory.cpp  triangle.cpp
Figures-Project/tests/: test_circle.cpp  test_factorys.cpp  test_rectangle.cpp  test_string_to_figure.cpp  test_triangle.cpp
headers/decorators/: CyclingDecoration.h  RandomDecoration.h
headers/labels/: LabelBuilder.h
headers/transformations/: CompositeTrans.h  capitalize.h  censor.h  decorate.h  leftTrim.h  normalizeSpace.h  replace.h  rightTrim.h  trans.h
labels/headers/decorators/: DecoratorBase.h  TextDecoration.h
labels/headers/labels/: Label.h  LabelPrinter.h  ProxyLabel.h  RichLabel.h  SimpleLabel.h  helpText.h
labels/headers/transformations/: transFactory.h
labels/src/decorators/: CyclingDecoration.cpp  RandomDecoration.cpp  TextDecoration.cpp
labels/src/transformation/: CompositeTrans.cpp
labels/tests/: testTrans.cpp
src/labels/: LabelBuilder.cpp  Labels.cpp  ProxyLabels.cpp
src/transformation/: transFactory.cpp
tests/: CMakeLists.txt  test.cpp  testLabel.cpp
